# summer2015

./: .gitignore  README.md  drive_mario.py  pub_c.cpp  test.py  test_timer.py  try.cpp
arduino/beta/: beta.ino
arduino/mario/: gripper.h  gripper.ino  mario.ino  motor_control.h  motor_control.ino  port_def.h  port_def.ino  ultrasound.h  ultrasound.ino
cam/: .pingPongTracking.py.swm  .pingPongTracking.py.swn  .pingPongTracking.py.swo  .pingPongTracking.py.swp  pingPongTracking.py  ppt.py  wuclient_thread.py
cam/userland-master/host_applications/linux/apps/raspicam/: CMakeCache.txt  CMakeLists.txt  Makefile  camcv.c  camcv2.c  camcv_vid.cpp.backup  camcv_vid0.c  camcv_vid3.cpp  camcv_vid4.cpp  camcv_vid5.cpp  camcv_vid_circle.cpp  camcv_vid_circle2.cpp  cmake_install.cmake
imageRecognition/: imageApi.py
pi/: drive_mario.py  mid_filter.py  pub.py  publisher.py  randomRun.py  subscriber.py  ultrasound.py  ultrasound_catch.py  ultrasound_catch_ball.py  ultrasound_pub.py  ultrasound_sendCommand.py
speechRecognition/: audio.py  ez_setup.py  multipart.py  record.py  speech2speech_tuling.py  text2speech_tuling.py  tuling_robot.py
